public interface Displayable {
    void displayDetails();
    void displayStatus();
}