public enum ProductCategory {
    ELECTRONICS, CLOTHING, FOOD, BOOKS, TOYS, OTHER
}
